--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,15 +102,15 @@ section {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    background: var(--dark-second-bg);
 }
 
 .home-img img {
     width: 35vw;
-    /* margin-right: 100px; */
 
     opacity: 0;
     animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 2s, 3s;
+    animation-delay: 0s, 2s;
 }
 
 .home-content h3 {
@@ -136,11 +136,11 @@ span {
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
-    line-height: 1.3;
-    /* 
-    opacity: 0;
+    line-height: 1.3; */
+    
+    /* opacity: 0;
     animation: sliderLeft 1s ease forwards;
-    animation-delay: 1s; */
+    animation-delay: 1s; */ */
 }
 
 .home-content p {
@@ -347,46 +347,11 @@ span {
     bottom: 5px;
 }
 
-/* //////////////////////////////////////////////////////// */
-
-/* Раздел Обо мне */
-
-.about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    background: var(--dark-second-bg);
-}
-
-.about-img img {
-    width: 35vw;
-
-    opacity: 0;
-    animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 2s, 3s;
-}
 
 .heading {
     text-align: center;
     font-size: 4.5rem;
 }
-
-.about-content h2 {
-    text-align: left;
-    line-height: 1.2;
-}
-
-.about-content h3 {
-    font-size: 2.6rem;
-}
-
-.about-content p {
-    font-size: 1.6rem;
-    margin: 2rem 0 3rem;
-}
-
-/* //////////////////////////////////////////////////////// */
 
 /* Подвал */
 
