--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,17 @@
     --light-text-secondary: #626F86;
     --light-primary: #1D7AFC;
 
+
+    --primary: #1f2e88;
+    --secondary: #69d6ff;
+    --hover: #a2d9f5;
+    --black: #333;
+    --white: #fff;
+    --light-color: #666;
+    --light-bg: #eee;
+    --border: .2rem solid rgba(0, 0, 0, .1);
+    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+
     /* Темная тема */
     --dark-bg: #1f242d;
     --dark-second-bg: #323946;
@@ -136,11 +147,11 @@ span {
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
-    line-height: 1.3; */
-    
+    line-height: 1.3;
+
     /* opacity: 0;
     animation: sliderLeft 1s ease forwards;
-    animation-delay: 1s; */ */
+    animation-delay: 1s; */
 }
 
 .home-content p {
@@ -848,3 +859,163 @@ span {
 }
 
 /* //////////////////////////////////////////////////////// */
+
+
+
+/* services end */
+
+/* faq */
+.faq {
+    background: var(--dark-bg);
+}
+
+.faq h2 {
+    margin-bottom: 5rem;
+}
+
+.faq .accordion-container {
+    padding: 0 2rem;
+}
+
+.faq .accordion-container .accordion {
+    margin-bottom: 2rem;
+    cursor: pointer;
+}
+
+.faq .accordion-container .accordion.active .accordion-heading {
+    background: var(--dark-main-color);
+}
+
+.faq .accordion-container .accordion.active .accordion-heading h3 {
+    color: black;
+}
+
+.faq .accordion-container .accordion.active .accordion-heading i {
+    color: black;
+    transform: rotate(180deg);
+    transition: transform .2s .1s;
+}
+
+.faq .accordion-container .accordion.active .accordion-content {
+    display: block;
+}
+
+.faq .accordion-container .accordion .accordion-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    background: var(--dark-main-color);
+    padding: 1.5rem 2rem;
+}
+
+.faq .accordion-container .accordion .accordion-heading h3 {
+    font-size: 1.8rem;
+    color: black;
+}
+
+.faq .accordion-container .accordion .accordion-heading i {
+    font-size: 2.5rem;
+}
+
+.faq .accordion-container .accordion .accordion-content {
+    font-size: 1.5rem;
+    padding: 1.5rem 2rem;
+    border: black;
+    background: var(--white);
+    color: black;
+    border-top: 0;
+    line-height: 2;
+    display: none;
+    animation: animate .2s linear backwards;
+    transform-origin: top;
+}
+
+@keyframes animate {
+    0% {
+        transform: scaleY(0);
+    }
+}
+
+.services_home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--dark-bg);
+}
+
+.services_home-img img {
+    width: 35vw;
+    opacity: 0;
+    animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 0s, 2s;
+}
+
+.services_home-content h1 {
+    margin-bottom: 4rem;
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+.services_home-content p {
+    font-size: 1.6rem;
+}
+
+
+/* Price */
+.table-box {
+    margin: 50px auto;
+}
+
+.table-row {
+    display: table;
+    width: 80%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: transparent;
+    padding: 12px 0;
+    color: white;
+    font-size: 13px;
+    box-shadow: 0 1px 4px 0px rgba(0, 0, 50, 0.3);
+}
+
+.table-head {
+    background: var(--dark-main-color);
+    box-shadow: none;
+    color: black;
+    font-weight: 600;
+}
+
+.table-head .table-cell {
+    border-right: none;
+}
+
+.table-cell {
+    display: table-cell;
+    width: 20%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #d6d4d4;
+    vertical-align: middle;
+    font-size: 18px;
+}
+
+.first-cell {
+    text-align: left;
+    padding-left: 10px;
+}
+
+.last-cell {
+    border-right: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .table-row {
+        font-size: 11px;
+    }
+}
+
+/* Price end */
